# cgopt-worker

./: .Makefile.swp  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  broker.py  environment.dev.yml  environment.yml  worker  worker.py
CMakeModules/: FindZMQ.cmake
app/messagequeue/: queueclient.py
app/worker/: cuda.template.py  modulegenerator.py  worker.py
src/: MessageQueueClient.cpp  MessageQueueClient.h  Worker.h  main.cpp  msgqueueclient.hpp  producer.cpp  worker.cpp
src/CUDA/: OptRunner.cpp  OptRunner.cu  OptRunner.h
src/kj/: KjStringPipe.h
src/worker/: msgqueueclient.hpp  producer  producer.cpp  worker  worker.cpp
tests/: context.py  test_actor_optimization.py  test_actor_ping.py  test_actor_stats.py  test_modulegenerator.py  test_opt_worker.py
worker/: __init__.py
worker/cuda/: cuda.template.py  modulegenerator.py  opt_worker.py  sim-annealing.template.py  worker.py
worker/internal/: internal.conf
worker/messagequeue/: __init__.py  queueclient.py
worker/tasks/: __init__.py  actors.py  broker.py
worker/worker/: worker.py
